--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/preset-react": "^7.0.0-beta.51",
     "babel-loader": "^8.0.0-beta",
+    "bulma": "^0.7.1",
     "core-js": "^2.5.7",
+    "css-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "progress-bar-webpack-plugin": "^1.11.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
+    "style-loader": "^0.21.0",
     "styled-components": "^3.3.3",
+    "uuid": "^3.3.2",
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
