--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --hot --config config/webpack/dev.webpack.config.js --history-api-fallback"
+    "start": "webpack-dev-server --hot --config config/webpack/dev.webpack.config.js --history-api-fallback",
+    "build:prod": "webpack --config config/webpack/prod.webpack.config.js --history-api-fallback",
+    "prestart:prod": "babel src --presets=@babel/env,@babel/preset-react --plugins=@babel/plugin-proposal-class-properties,@babel/plugin-proposal-object-rest-spread --no-babelrc --out-dir build",
+    "start:prod": "cd build && node server.js"
   },
   "dependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/cli": "^7.0.0-beta.54",
     "@babel/core": "^7.0.0-beta.52",
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.52",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.52",
@@ -13,6 +16,7 @@
     "bulma": "^0.7.1",
     "core-js": "^2.5.7",
     "css-loader": "^1.0.0",
+    "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "progress-bar-webpack-plugin": "^1.11.0",
