--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,20 @@
 {
   "extends": "airbnb",
+  "parser": "babel-eslint",
   "env": {
     "browser": true,
     "node": true
   },
   "rules": {
-    "semi": "off"
+    "semi": "off",
+    "max-len": ["error", { "code": 90 }],
+    "no-unused-expressions": "off",
+    "no-underscore-dangle": "off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/label-has-for": "off",
+    "jsx-quotes": ["error", "prefer-single"],
+    "react/forbid-prop-types": "off",
+    "react/jsx-one-expression-per-line": "off",
+    "react/button-has-type": "off"
   }
 }
