--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
-    "style-loader": "^0.21.0",
-    "styled-components": "^3.3.3",
+    "style-loader": "0.23.1",
     "uuid": "^3.3.2",
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8",
