--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,7 @@
 {
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-object-rest-spread",
-    "react-hot-loader/babel",
-    "transform-regenerator"
+    "react-hot-loader/babel"
   ],
   "presets": [
     [
