--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "webpack-dev-server --hot --config config/webpack/dev.webpack.config.js --history-api-fallback",
     "build:prod": "cross-env NODE_ENV=production && webpack --config config/webpack/prod.webpack.config.js --history-api-fallback",
-    "prestart:prod": "babel src --presets=@babel/env,@babel/preset-react --plugins=@babel/plugin-proposal-class-properties,css-modules-transform,transform-regenerator,@babel/plugin-proposal-object-rest-spread --no-babelrc --out-dir build",
+    "prestart:prod": "babel src --presets=@babel/env,@babel/preset-react --plugins=@babel/plugin-proposal-class-properties,babel-plugin-css-modules-transform --no-babelrc --out-dir build",
     "start:prod": "cd build && node server.js",
     "prestart:api": "babel src/api.js --presets=@babel/env --no-babelrc --out-dir build",
     "start:api": "cd build && node api.js",
@@ -17,44 +17,41 @@
     "lint": "eslint --ext .js --ext .jsx src"
   },
   "dependencies": {
-    "@babel/cli": "^7.0.0-beta.54",
-    "@babel/core": "^7.0.0-beta.52",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.52",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.52",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "@babel/preset-react": "^7.0.0-beta.51",
+    "@babel/polyfill": "^7.0.0",
     "axios": "^0.18.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.0-beta",
-    "babel-plugin-css-modules-transform": "^1.6.1",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
+    "babel-plugin-css-modules-transform": "^1.6.2",
     "body-parser": "^1.18.3",
     "bulma": "^0.7.1",
-    "core-js": "^2.5.7",
     "cors": "^2.8.4",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
     "express": "^4.16.3",
+    "react": "^16.4.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "progress-bar-webpack-plugin": "^1.11.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.3.3",
     "style-loader": "0.23.1",
     "uuid": "^3.3.2",
-    "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
-    "write-file-webpack-plugin": "^4.3.2"
+    "webpack": "^4.26.1",
+    "write-file-webpack-plugin": "^4.3.2",
+    "webpack-cli": "^3.1.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.0.0-beta.52",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.52",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-react": "^7.0.0-beta.51",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.0-beta",
+    "css-loader": "^1.0.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0"
+    "eslint-plugin-react": "^7.11.0",
+    "react-hot-loader": "^4.3.3",
+    "webpack-dev-server": "^3.1.4"
   }
 }
