--- a/package.json
+++ b/package.json
@@ -22,20 +22,22 @@
     "babel-plugin-css-modules-transform": "^1.6.2",
     "body-parser": "^1.18.3",
     "bulma": "^0.7.1",
+    "compression": "^1.7.3",
     "cors": "^2.8.4",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
-    "react": "^16.4.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "progress-bar-webpack-plugin": "^1.11.0",
     "prop-types": "^15.6.2",
+    "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "style-loader": "0.23.1",
+    "styled-components": "^4.1.2",
     "uuid": "^3.3.2",
     "webpack": "^4.26.1",
-    "write-file-webpack-plugin": "^4.3.2",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "write-file-webpack-plugin": "^4.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
