--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "max-len": ["error", { "code": 80 }],
     "no-unused-expressions": "off",
     "no-underscore-dangle": "off",
+    "import/newline-after-import": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/label-has-for": "off",
     "jsx-quotes": ["error", "prefer-single"],
