--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "mongoose": "^5.2.13",
     "progress-bar-webpack-plugin": "^1.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
